--- a/07_project/index.html
+++ b/07_project/index.html
@@ -9,14 +9,14 @@
     <title>JavaScript Background Color Switcher</title>
   </head>
   <body>
-    <nav>
+    <!-- <nav>
       <a href="/" aria-current="page">Home</a>
       <a target="_blank" href="https://www.youtube.com/@chaiaurcode"
         >Youtube channel</a
       >
-    </nav>
-    <div class="canvas">
-      <!-- <a
+    </nav> -->
+    <!-- <div class="canvas">
+      <a
         style="
           background-color: #fff;
           padding: 10px 30px;
@@ -29,15 +29,17 @@
         >Back to Home Page</a
       > -->
       <h1>Color Scheme Switcher</h1>
-      <span class="button" id="grey"></span>
-      <span class="button" id="white"></span>
-      <span class="button" id="blue"></span>
-      <span class="button" id="yellow"></span>
+      <span class="button" id="navy"></span>
+      <span class="button" id="red"></span>
+      <span class="button" id="green"></span>
+      <span class="button" id="pink"></span>
+      <span class="button" id="purple"></span>
+      
       <h2>
         Try clicking on one of the colors above
         <span>to change the background color of this page!</span>
       </h2>
     </div>
-    <script src="chaiaurcode.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
