--- a/07_project/index.html
+++ b/07_project/index.html
@@ -34,10 +34,10 @@
       <span class="button" id="green"></span>
       <span class="button" id="pink"></span>
       <span class="button" id="purple"></span>
-      
-      <h2>
+
+ 
         Try clicking on one of the colors above
-        <span>to change the background color of this page!</span>
+        <span>to change the background color of this page hate u!</span>
       </h2>
     </div>
     <script src="script.js"></script>
