--- a/08_events/03_index.html
+++ b/08_events/03_index.html
@@ -13,5 +13,44 @@
 </body>
 <script>
 
+// // setInterval repeatedly executes a function with a fixed interval.....
+// //eg1:it gives continous olp.....
+// setInterval(function(){
+//   console.log("reet" , Date.now());
+// },2000);
+
+// //eg2:
+// const sayDate = function(){
+//   console.log("sravs",Date.now());
+  
+// }
+// setInterval(sayDate,1000)
+
+//  //eg3:
+//   const parameter = function(str){       //v can also pass the parameter...
+//   console.log(str ,Date.now());
+  
+// }
+// setInterval(parameter , 1000,'rajput');
+
+// const intervalId = setInterval(parameter , 1000,'rajput');
+
+// clearInterval(intervalId); ///everythink is cleared now.....
+
+//task
+const stInt = function(str){
+    console.log(str, Date.now());
+  }
+  let interVal;
+  document.querySelector('#start').addEventListener('click',function(){
+    interValid = setInterval(stInt, 1000, 'Hello World');
+  })
+  document.querySelector('#stop').addEventListener('click', function(){
+    clearInterval(interValid);
+    console.log('clicked');
+  })
+    
+
+
 </script>
 </html>
