--- a/08_events/03_index.html
+++ b/08_events/03_index.html
@@ -38,18 +38,40 @@
 // clearInterval(intervalId); ///everythink is cleared now.....
 
 //task
-const stInt = function(str){
-    console.log(str, Date.now());
-  }
-  let interVal;
-  document.querySelector('#start').addEventListener('click',function(){
-    interValid = setInterval(stInt, 1000, 'Hello World');
-  })
-  document.querySelector('#stop').addEventListener('click', function(){
-    clearInterval(interValid);
-    console.log('clicked');
-  })
-    
+//eg1:
+// const stInt = function(str){
+//   console.log(str, Date.now());
+//  }
+//  let interVal;
+// document.querySelector('#start').addEventListener('click',function(){
+ //   interValid = setInterval(stInt, 1000, 'Hello World');
+ // })
+ // document.querySelector('#stop').addEventListener('click', function(){
+  //  clearInterval(interValid);
+   // console.log('clicked');
+ // }) 
+
+//eg2:
+
+        let fStart = function() {
+            console.log("rajput");
+        }
+
+        const S = function() {
+            sI = setInterval(fStart, 2000);
+        }
+
+        let C = function() {
+            clearInterval(sI);
+            console.log('clicked');
+            
+        }
+
+        document.querySelector('#start').addEventListener('click', S);
+        document.querySelector('#stop').addEventListener('click', C);
+
+
+
 
 
 </script>
